[package]
name = "remote-package"
version = "0.1.0"
edition = "2018"
authors = ["Max Dymond <cmeister2@gmail.com>"]
description = "A simple crate to query remote packages for information."
license = "MIT"
repository = "https://github.com/cmeister2/remote-package"
rust-version = "1.56"
keywords = ["rpm", "debian", "package"]
categories = ["development-tools"]

[dependencies]
debpkg = { version = "0.5.0", optional = true }
reqwest = { version = "0.11.10", features = ["blocking"], optional = true }
rpm-rs = { version = "0.8.1", optional = true }
thiserror = "1.0.30"

[features]
default = ["http", "debian", "rpm"]
http = [ "reqwest" ]
debian = [ "debpkg" ]
rpm = [ "rpm-rs" ]

[patch.crates-io]
# Workaround for zstd-rs's interesting use of semver
# Compatible with rpm-rs, which uses zstd = 0.9.0
debpkg = { git = "https://github.com/schultetwin1/debpkg", rev = "f48db7c69c85fdce5b01039a9b3cc75e918de5d2"}
