[package]
name = "remote-package"
version = "0.3.0"
edition = "2018"
authors = ["Max Dymond <cmeister2@gmail.com>"]
description = "A simple crate to query remote packages for information."
license = "MIT"
repository = "https://github.com/cmeister2/remote-package"
rust-version = "1.56"
keywords = ["rpm", "debian", "package"]
categories = ["development-tools"]

[dependencies]
debpkg = { version = "0.6.0", optional = true }
reqwest = { version = "0.11.10", features = ["blocking"], optional = true }
fez = { version = "0.8.1", optional = true }
thiserror = "1.0.30"
infer = "0.9.0"

[features]
default = ["http", "debian", "rpm"]
http = [ "reqwest" ]
debian = [ "debpkg" ]
rpm = [ "fez" ]
